# langrepl

./: .bumpversion.toml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  test.md
.github/: dependabot.yml
.github/workflows/: ci-integration.yml  ci.yml  integration.yml  publish-pypi.yml  release-please.yml  release.yml  version-bump.yml
docs/: DEEP_AGENT.md  HIL.md
examples/: useful-mcp-servers.json
resources/features/: notes.yml
scripts/: sync_versions.py
src/agents/: __init__.py  context.py  deep_agent.py  factory.py  react_agent.py  state.py
src/checkpointer/: factory.py  utils.py
src/cli/: initializer.py
src/configs/: __init__.py  agent.py  approval.py  base.py  checkpointer.py  enums.py  llm.py  mcp.py  registry.py  sandbox.py
src/core/: config.py  constants.py  logging.py  settings.py
src/llms/: factory.py
src/mcp/: client.py  factory.py  tool.py
src/middleware/: __init__.py  approval.py  compress_tool_output.py  dynamic_prompt.py  pending_tool_result.py  return_direct.py  sandbox.py  token_cost.py
src/sandboxes/: __init__.py  base.py  factory.py  injectors.py  serialization.py  worker.py
src/skills/: factory.py
src/state/: base.py
src/tools/: catalog.py  factory.py  schema.py  wrapper.py
src/utils/: compression.py  image.py  package_cache.py  rate_limiter.py  render.py  validators.py  version.py
tests/: conftest.py
tests/agents/: test_agent_factory.py  test_agent_state.py  test_deep_agent.py  test_react_agent.py
tests/api/: test_agui_service.py
tests/checkpointer/: test_checkpointer_factory.py  test_serde.py  test_utils.py
tests/configs/: __init__.py  test_config_directory.py  test_configs.py  test_server.py
tests/core/: test_config.py  test_config_directory.py
tests/fixtures/: agents.py  checkpointers.py  cli.py  mcp.py  mocks.py
tests/integration/: conftest.py  test_sandbox_execution.py
tests/llms/: test_llm_factory.py
tests/mcp/: test_client.py  (+1 more)
ui/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+230 files in other folders)
