[project]
name = "langrepl"
version = "0.2.0"
description = "A powerful interactive terminal CLI for AI-powered assistance, built with Interactive command-line chat application powered by Langchain, Langgraph, Prompt Toolkit and Rich."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-aws>=0.2.28",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-deepseek>=0.1.3",
    "langchain-google-genai>=2.1.7",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.4",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-prebuilt>=0.5.2",
    "prompt-toolkit>=3.0.52",
    "rich>=14.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "types-pyyaml>=6.0.12.20250822",
    "types-aiofiles>=24.1.0.20250822",
    "pytest-asyncio>=1.1.0",
    "pygments-cache>=0.1.3",
    "trafilatura>=1.8.3",
]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = [
    "langchain_mcp_adapters.*",
    "pygments_cache.*"
]
ignore_missing_imports = true


[tool.pytest.ini_options]
# Add the project root to the Python path so that tests can import from src
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "boto3-stubs[bedrock-runtime]>=1.40.47",
    "bump-my-version>=1.2.4",
    "isort>=6.0.1",
    "langgraph-cli[inmem]>=0.4.4",
    "mypy>=1.17.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pyupgrade>=3.19.1",
]


[tool.hatch.build.targets.wheel]
packages = ["src", "resources"]

[project.scripts]
langrepl = "src.cli.core.app:cli"
lg = "src.cli.core.app:cli"
